--- a/assets/style.css
+++ b/assets/style.css
@@ -3,11 +3,127 @@
     padding:0;
 }
 
-img{
+.arrow-button {
+    display: inline-block;
+    position: relative;
+    width: 200px;
+    height: 40px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    color: #ffffff;   
+  }
+  
+  .color-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 66.67%;
+    height: 100%;
+    background-color: #0d0d0d;
+    
+  }
+  
+  .arrow-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 33.33%;
+    height: 100%;
+    background-image: url(./icon-arrow-right.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20px 20px;
+    background-color: rgb(203, 136, 53);
+  }
+
+header{
+    display: flex;   
+    height: 40vh;
+
+}
+.hero{
+    background-image: url(./tablet/image-hero.jpg);    
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 30rem;
+    width: 20rem;
+    position: absolute;
+}
+.header-content{
+    display: flex;
+    flex-direction: column;
+    max-width: 15rem;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
+    margin-left: 18rem;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    height:30vh;
+    position: relative;
+    margin-top: 12rem;
+}
+.gallery-top{
+    display: flex;
+}
+.gallery-content{
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+}
+.gallery{
+    background-image: url(./tablet/image-grid-1.jpg);
+    background-size:  cover;
+    background-repeat: no-repeat;
+    height: 15rem;
+    width: 30rem;
+    margin: 1rem;
+}
+
+.gallery-text{
+    max-width: 14rem;
+}
+
+.gallery-bottom{
+    display: flex;
+    margin: 1rem;
+}
+.left-image{
+    background-image: url(./tablet/image-grid-2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 40rem;
+    width: 40rem;
+}
+
+.right-side{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    padding: 1rem;
+}
+.little-image{
+    background-image: url(./tablet/image-grid-3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 20rem;
+    width: 20rem;
+
+}
+
+.icons{
     height: 1rem;
-    width: 1rem;
-    
-    
+    width: 1rem;   
 }
 
 footer{
@@ -15,6 +131,16 @@ footer{
     bottom: 0;
     background-color: black;
     color: white;
+    height: 30vh;
+   position: relative;
+   margin-top: 50rem;
+   align-items: center;
+   justify-content: space-evenly ;
 }
+
+.footer-text{
+    max-width: 15rem;
+}
+
 
 
